# rrdemo

./: .gitignore  App.py  README.md  app.py  graph.py  linreg_context.md  prompts.py  pyproject.toml  vectorstore.py
.streamlit/: config.toml
chroma_db/: chroma.sqlite3
chroma_db/1c21ee53-722b-46eb-8af6-331d033da565/: index_metadata.pickle
pages/: Leaderboard.py
