[project]
name = "redactaragstreamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.9",
    "st-supabase-connection>=2.1.3",
    "streamlit>=1.56.0",
    "supabase>=2.25.1",
]
